--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         @media screen and (max-width: 767px) {
             .code-container {
-                margin: 0 10px; /* Ajuste conforme necessário */
+                margin: 0 10px;
             }
 
             .copy-button {
-                right: 5px; /* Ajuste conforme necessário */
+                right: 5px;
                 top: 01%;
             }
             .code-content {
@@ -71,11 +71,85 @@
 
 <div class="code-container">
     <pre>
-        <code class="language-html code-content">
-            &lt;div class="example"&gt;
-                &lt;p&gt;Este é um exemplo de código HTML&lt;/p&gt;
-            &lt;/div&gt;
-        </code>
+        <code class="language-typescript code-content">
+        // Interface para definir a estrutura de um usuário
+interface User {
+    id: number;
+    username: string;
+    email: string;
+    createdAt: Date;
+}
+
+// Classe para representar um serviço de gerenciamento de usuários
+class UserManager {
+    private users: User[] = [];
+
+    // Método para adicionar um usuário
+    addUser(user: User): void {
+        // Verifica se o usuário já existe com base no ID
+        const existingUser = this.users.find(u => u.id === user.id);
+        if (existingUser) {
+            throw new Error('Usuário já existe.');
+        }
+        this.users.push(user);
+    }
+
+    // Método para encontrar um usuário pelo ID
+    findUserById(id: number): User | undefined {
+        return this.users.find(user => user.id === id);
+    }
+
+    // Método para atualizar informações de um usuário
+    updateUser(id: number, updatedInfo: Partial<User>): void {
+        const userIndex = this.users.findIndex(user => user.id === id);
+        if (userIndex === -1) {
+            throw new Error('Usuário não encontrado.');
+        }
+        this.users[userIndex] = { ...this.users[userIndex], ...updatedInfo };
+    }
+
+    // Método para remover um usuário pelo ID
+    removeUser(id: number): void {
+        const userIndex = this.users.findIndex(user => user.id === id);
+        if (userIndex === -1) {
+            throw new Error('Usuário não encontrado.');
+        }
+        this.users.splice(userIndex, 1);
+    }
+
+    // Método para listar todos os usuários
+    getAllUsers(): User[] {
+        return this.users;
+    }
+}
+
+// Exemplo de uso:
+const userManager = new UserManager();
+
+const newUser: User = {
+    id: 1,
+    username: 'john_doe',
+    email: 'john@example.com',
+    createdAt: new Date()
+};
+
+userManager.addUser(newUser);
+
+const foundUser = userManager.findUserById(1);
+if (foundUser) {
+    console.log('Usuário encontrado:', foundUser);
+} else {
+    console.log('Usuário não encontrado.');
+}
+
+userManager.updateUser(1, { username: 'john_smith' });
+
+console.log('Lista de usuários:', userManager.getAllUsers());
+
+userManager.removeUser(1);
+console.log('Lista de usuários após remoção:', userManager.getAllUsers());
+
+    </code>
     </pre>
     <button class="copy-button copy-button-html">Copiar código</button>
 </div>
